<resources>
    <string name="app_name">PlatziConf</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="inicio_frag_tv_que_es">¿Qué es PlatziConf?</string>
    <string name="inicio_frag_tv_que_es_resp">Platzi una vez más, cómo todos los años, hace el evento más grande de comunidad tecnológica en los que apasionados por aprender, emprender e innovar se encuentran en un mismo lugar para escuchar a expertos de la industria que durante horas comparten su conocimiento.</string>
    <string name="inicio_frag_tv_por_que">¿Por qué asistir?</string>
    <string name="inicio_frag_tv_por_que_resp">Porque esto solo sucede una vez cada año. Porque en America Latina la PlatziConf es el único evento de la industria tecnológica que reúne a profesionales de altísimo nivel en un solo lugar. Porque en este evento conocerás personas que en el futuro pueden ser tus amigos, tus colegas, tus colaboradores y hasta tus socios. Porque en esta versión todo girará al rededor de la pregunta: ¿Qué habilidades hacen a un gran profesional y lo preparan para los trabajos del futuro? y juntos responderemos lo que esto significa.</string>
    <string name="inicio_frag_tv_info">Información de la PlatziConf México 2019</string>
    <string name="inicio_frag_tv_info_resp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. Feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Vel orci porta non pulvinar neque laoreet. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin. Dignissim sodales ut eu sem integer vitae justo eget. Mi bibendum neque egestas congue quisque egestas diam in arcu. Enim nulla aliquet porttitor lacus luctus. Ut lectus arcu bibendum at varius vel pharetra vel. Venenatis a condimentum vitae sapien pellentesque habitant morbi tristique. Mauris a diam maecenas sed enim ut sem viverra aliquet.</string>
    <string name="speaker_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
</resources>