<?xml version="1.0" encoding="utf-8"?>
<!--
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">-->

    <!-- Colocamos un linearLayout porque el scrollview solo permite tener un elemento dentron del contenido-->
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
          >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardcornerRadius"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_parrafo"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="25dp"
                        android:id="@+id/ivHome"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImageViewHome"
                        android:src="@drawable/banner1" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/anchoView"
                        android:background="@color/md_pink_50" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/inicio_frag_tv_que_es"
                        android:textColor="@color/design_default_color_primary_dark"
                        android:textSize="@dimen/tamañoTitulo"
                        android:textStyle="bold" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/inicio_frag_tv_que_es_resp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tamañoSubtitulo" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/cardcornerRadius"
                app:cardElevation="4dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_parrafo"
                    android:orientation="vertical">




                    <ImageView
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="25dp"
                        android:id="@+id/ivAsist"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImageViewHome"
                        android:src="@drawable/banner2" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/anchoView"
                        android:background="@color/md_pink_50" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/inicio_frag_tv_por_que"
                        android:textColor="@color/design_default_color_primary_dark"
                        android:textSize="@dimen/tamañoTitulo"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/inicio_frag_tv_por_que_resp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tamañoSubtitulo" />


                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardcornerRadius"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_parrafo"
                    android:orientation="vertical">




                    <ImageView
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="25dp"
                        android:id="@+id/ivInfo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImageViewHome"
                        android:src="@drawable/banner3" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/anchoView"
                        android:background="@color/md_pink_50" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/inicio_frag_tv_info"
                        android:textColor="@color/design_default_color_primary_dark"
                        android:textSize="@dimen/tamañoTitulo"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/inicio_frag_tv_info_resp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tamañoSubtitulo" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
<!--</FrameLayout>-->